--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,11 @@
 
     @mixin clearfix;
 
+
+    &--t-padding {
+        padding-top: 80px;
+    }
+
     &--gutters {
         margin-right: -65px;
     }
@@ -10,12 +15,20 @@
         margin-right: -100px;
     }
 
+    &--gutters-small {
+        margin-right: -45px;
+    }
+
     &--gutters > div {
         padding-right: 65px;
     } 
 
-      &--gutters-large > div {
+    &--gutters-large > div {
         padding-right: 100px;
+    } 
+     
+    &--gutters-small > div {
+        padding-right: 45px;
     } 
 
 
@@ -53,5 +66,58 @@
         width: 63%;
     }
 
+   }
+
+     @mixin atLarge {
+    
+    &__large-4 {
+        float:left;
+        width: 33.33%;
+    }
+
+      &__b-margin-until-large {
+        margin-bottom: 0;
+    }
+
+    &__large-4--larger {
+        float: left;
+        width: 37%;
+    }
+
+    &__large-6 {
+        float: left;
+        width: 50%;
+    }
+
+    &__large-8 {
+        float:left;
+        width: 66.66%;
+    }
+
+    &__large-8--smaller {
+        width: 63%;
+    }
+
+   }
+
+   /*Begin Equal Height Rules */
+   &--equal-height-at-medium {
+       @mixin atMedium {
+           display: flex;
+       }
+       & > div {
+           float: none;
+           display: flex;
+       }
+   }
+
+    &--equal-height-at-large {
+       @mixin atLarge {
+           display: flex;
+       }
+       & > div {
+           float: none;
+           display: flex;
+       }
    }
 }
