--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -18,10 +18,16 @@
         margin-bottom: .6rem;
 
         @mixin atSmall {
-            margin-right: .5rem;
+            position: relative;
+            top:5px;
+            margin-right: 1.5rem;
             margin-left: 0;
             margin-bottom:0;
             display:inline-block;
         }
+    }
+
+    &--blue {
+        color: $mainBlue;
     }
 }
