--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -44,12 +44,17 @@
     }
 
     &__text-content {
+        padding-top: 88px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         left: 0;
         width: 100%;
-        text-align: center;    
+        text-align: center;   
+
+        @mixin atMedium {
+            padding-top: 60px;
+        } 
     }
 }
 
