Completed the modal overlay

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -27,6 +27,11 @@
         }
     }
 
+    &--less-margin {
+        margin-bottom: 1.3rem;
+        margin-top: 0;
+    }
+
     &--blue {
         color: $mainBlue;
     }
