--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -101,7 +101,7 @@
    }
 
    /*Begin Equal Height Rules */
-   &--equal-height-at-medium {
+   .flexbox &--equal-height-at-medium {
        @mixin atMedium {
            display: flex;
        }
@@ -111,7 +111,7 @@
        }
    }
 
-    &--equal-height-at-large {
+    .flexbox &--equal-height-at-large {
        @mixin atLarge {
            display: flex;
        }
