--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -4,7 +4,11 @@
     {{#first}}
         .icon {
          background-image: url('/assets/images/sprites/{{{sprite}}}');
-    }
+        }
+        .no-svg .icon{
+        background-image: url('/assets/images/sprites/{{#replaceSvgWithPng}}{{{sprite}}}{{/replaceSvgWithPng}}');
+        }
+
     {{/first}}
 
     .icon--{{base}} {
